ParentRegistration: Fixing layout issues

--- a/public/stylesheets/registration.css
+++ b/public/stylesheets/registration.css
@@ -22,6 +22,10 @@ span {
   vertical-align: middle;
 }
 
+img {
+  max-width: 100%;
+}
+
 #img-div {
   margin: 0;
 }
@@ -40,12 +44,21 @@ span {
   width: 100%;
 }
 
-#orange-container {
+#grey-container {
   background-color: lightgray;
   position: relative;
   right: 0;
   bottom: 0;
   height: 100%;
+
+}
+
+#grey-container > row{
+  background-color: lightgray;
+}
+
+#side-bar {
+  padding: 0;
 }
 
 #cancel {
@@ -57,6 +70,5 @@ span {
 #submit {
   background-color: #003434;
   border: none;
-  width: 100%;
   width: 100%;
 }
